// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form renders as expected 1`] = `
<div
  className="form"
>
  <WithStyles(ForwardRef(FormControl))
    error={false}
    fullWidth={true}
    margin="normal"
    required={true}
  >
    <WithStyles(ForwardRef(InputLabel))
      htmlFor="username"
    >
      Username
    </WithStyles(ForwardRef(InputLabel))>
    <WithStyles(ForwardRef(Input))
      autoComplete="username"
      autoFocus={true}
      id="username"
      name="username"
      onChange={[MockFunction]}
      value=""
    />
  </WithStyles(ForwardRef(FormControl))>
  <WithStyles(ForwardRef(FormControl))
    error={false}
    fullWidth={true}
    margin="normal"
    required={true}
  >
    <WithStyles(ForwardRef(InputLabel))
      htmlFor="password"
    >
      Password
    </WithStyles(ForwardRef(InputLabel))>
    <WithStyles(ForwardRef(Input))
      autoComplete="current-password"
      id="password"
      name="password"
      onChange={[MockFunction]}
      type="password"
      value=""
    />
  </WithStyles(ForwardRef(FormControl))>
  <WithStyles(ForwardRef(FormControlLabel))
    control={
      <WithStyles(ForwardRef(Checkbox))
        color="primary"
        value="remember"
      />
    }
    label="Remember me"
  />
  <SignInButton
    className="submit"
    isDisabled={true}
    onClick={[Function]}
  />
</div>
`;

exports[`Form when the user submits the form and the token is being created renders as expected 1`] = `
<div
  className="form"
>
  <WithStyles(ForwardRef(FormControl))
    error={false}
    fullWidth={true}
    margin="normal"
    required={true}
  >
    <WithStyles(ForwardRef(InputLabel))
      htmlFor="username"
    >
      Username
    </WithStyles(ForwardRef(InputLabel))>
    <WithStyles(ForwardRef(Input))
      autoComplete="username"
      autoFocus={true}
      id="username"
      name="username"
      onChange={[MockFunction]}
      value="foo"
    />
  </WithStyles(ForwardRef(FormControl))>
  <WithStyles(ForwardRef(FormControl))
    error={false}
    fullWidth={true}
    margin="normal"
    required={true}
  >
    <WithStyles(ForwardRef(InputLabel))
      htmlFor="password"
    >
      Password
    </WithStyles(ForwardRef(InputLabel))>
    <WithStyles(ForwardRef(Input))
      autoComplete="current-password"
      id="password"
      name="password"
      onChange={[MockFunction]}
      type="password"
      value="foo"
    />
  </WithStyles(ForwardRef(FormControl))>
  <WithStyles(ForwardRef(FormControlLabel))
    control={
      <WithStyles(ForwardRef(Checkbox))
        color="primary"
        value="remember"
      />
    }
    label="Remember me"
  />
  <WithStyles(ForwardRef(CircularProgress))
    color="secondary"
  />
</div>
`;

exports[`Form when the username and password are provided renders as expected 1`] = `
<div
  className="form"
>
  <WithStyles(ForwardRef(FormControl))
    error={false}
    fullWidth={true}
    margin="normal"
    required={true}
  >
    <WithStyles(ForwardRef(InputLabel))
      htmlFor="username"
    >
      Username
    </WithStyles(ForwardRef(InputLabel))>
    <WithStyles(ForwardRef(Input))
      autoComplete="username"
      autoFocus={true}
      id="username"
      name="username"
      onChange={[MockFunction]}
      value="foo"
    />
  </WithStyles(ForwardRef(FormControl))>
  <WithStyles(ForwardRef(FormControl))
    error={false}
    fullWidth={true}
    margin="normal"
    required={true}
  >
    <WithStyles(ForwardRef(InputLabel))
      htmlFor="password"
    >
      Password
    </WithStyles(ForwardRef(InputLabel))>
    <WithStyles(ForwardRef(Input))
      autoComplete="current-password"
      id="password"
      name="password"
      onChange={[MockFunction]}
      type="password"
      value="foo"
    />
  </WithStyles(ForwardRef(FormControl))>
  <WithStyles(ForwardRef(FormControlLabel))
    control={
      <WithStyles(ForwardRef(Checkbox))
        color="primary"
        value="remember"
      />
    }
    label="Remember me"
  />
  <SignInButton
    className="submit"
    isDisabled={false}
    onClick={[Function]}
  />
</div>
`;
